--- a/src/main/resources/templates/site/login3.html
+++ b/src/main/resources/templates/site/login3.html
@@ -67,10 +67,11 @@
 					<div class="form-group row">
 						<label for="username" class="col-sm-2 col-form-label text-right">账号:</label>
 						<div class="col-sm-10">
-							<input type="text" th:class="|form-control ${usernameMsg!=null?'is-invalid':''}|"
+							<input type="text" th:class="|form-control ${usernameMsg!=null?'is-valid':''}|"
 								   th:value="${param.username}"
-								   id="username" name="username" placeholder="请输入您的账号!" required>
-							<div class="invalid-feedback" th:text="${usernameMsg}">
+								   id="username" username="username" placeholder="请输入您的账号!" required>
+							<!--默认值，request对象中取参数--><!--判断是否要带该样式-->
+							<div class="invalid-feedback" th:text="${usernameMsg}"><!--动态提示-->
 								该账号不存在!
 							</div>
 						</div>
@@ -81,7 +82,7 @@
 							<input type="password" th:class="|form-control ${passwordMsg!=null?'is-invalid':''}|"
 								   th:value="${param.password}"
 								   id="password" name="password" placeholder="请输入您的密码!" required>
-							<div class="invalid-feedback" th:text="${passwordMsg}">
+							<div class="invalid-feedback" th:text="${passwordMsg}>
 								密码长度不能小于8位!
 							</div>							
 						</div>
@@ -91,15 +92,15 @@
 						<div class="col-sm-6">
 							<input type="text" th:class="|form-control ${codeMsg!=null?'is-invalid':''}|"
 								   id="verifycode" name="code" placeholder="请输入验证码!">
-							<div class="invalid-feedback" th:text="${codeMsg}">
+							<div class="invalid-feedback" th:text="${codeMsg}>
 								验证码不正确!
 							</div>
 						</div>
 						<div class="col-sm-4">
 							<img th:src="@{/kaptcha}" id="kaptcha" style="width:100px;height:40px;" class="mr-2"/>
 							<a href="javascript:refresh_kaptcha();" class="font-size-12 align-bottom">刷新验证码</a>
-						</div>
-					</div>				
+						</div><!--刷新验证码-->
+					</div>
 					<div class="form-group row mt-4">
 						<div class="col-sm-2"></div>
 						<div class="col-sm-10">
@@ -186,9 +187,9 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
 	<script th:src="@{/js/global.js}"></script>
 	<script>
-		function refresh_kaptcha() {
-			var path = CONTEXT_PATH + "/kaptcha?p=" + Math.random();
-			$("#kaptcha").attr("src", path);
+		function refresh_kaptcha(){
+			var path = CONTEXT_PATH + "/kaptcha?p=" + Math.random();//让浏览器误以为路径变了
+			$("#kaptcha").attr("src",path);
 		}
 	</script>
 </body>
