私信列表，发送列表

--- a/src/main/resources/templates/site/discuss-detail.html
+++ b/src/main/resources/templates/site/discuss-detail.html
@@ -155,12 +155,13 @@
 											<li class="d-inline ml-2"><a href="#" class="text-primary">赞(1)</a></li>
 											<li class="d-inline ml-2">|</li>
 <!--											<li class="d-inline ml-2"><a th:href="|#huifu-${rvoStat.count}|" data-toggle="collapse" class="text-primary">回复</a></li>-->
-											<li class="d-inline ml-2"><a href="#huifu-01" data-toggle="collapse" class="text-primary">回复</a></li>
+											<li class="d-inline ml-2"><a th:href="@{'#huifu-'+${rvoStat.count}}" data-toggle="collapse" class="text-primary">回复</a></li>
+<!--											<li class="d-inline ml-2"><a href="#huifu-01" data-toggle="collapse" class="text-primary">回复</a></li>-->
 <!--烦 暂未解决-->
 										</ul>
 
-										<div id="huifu-01" class="mt-4 collapse">
-										<!--<div th:id="|huifu-${rvoStat.count}|" class="mt-4 collapse">-->
+<!--										<div id="huifu-01" class="mt-4 collapse">-->
+										<div th:id="|huifu-${rvoStat.count}|" class="mt-4 collapse">
 
 											<form method="post" th:action="@{|/comment/add/${post.id}|}">
 												<div>
