--- a/src/main/resources/templates/site/notice.html
+++ b/src/main/resources/templates/site/notice.html
@@ -91,7 +91,7 @@
 									th:text="${#dates.format(commentNotice.message.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-28 14:13:25</span>
 							</h6>
 							<div>
-								<a href="#">
+								<a th:href="@{/notice/detail/comment}">
 									用户
 									<i th:utext="${commentNotice.user.username}">宇哥</i> 评论了你的
 									<b th:text="${commentNotice.entityType==1?'帖子':'回复'}">帖子</b> ...</a>
@@ -112,7 +112,7 @@
 									  th:text="${#dates.format(likeNotice.message.createTime,'yyyy-MM-dd HH:mm:ss')}">2021-04-28 14:13:25</span>
 							</h6>
 							<div>
-								<a href="#">
+								<a th:href="@{/notice/detail/like}">
 									用户
 									<i th:utext="${likeNotice.user.username}">宇哥</i> 点赞了你的
 									<b th:text="${likeNotice.entityType==1?'帖子':'回复'}">帖子</b> ...</a>
@@ -133,7 +133,8 @@
 									  th:text="${#dates.format(followNotice.message.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-28 14:13:25</span>
 							</h6>
 							<div>
-								<a href="notice-detail.html">用户
+								<a th:href="@{/notice/detail/follow}">
+									用户
 									<i th:utext="${followNotice.user.username}">宇哥</i>
                                      关注了你 ...
                                     </a>
