--- a/src/main/resources/templates/site/register.html
+++ b/src/main/resources/templates/site/register.html
@@ -69,7 +69,7 @@
 						<div class="col-sm-10">
 							<input type="text"
 								   th:class="|form-control ${usernameMsg!=null?'is-invalid':''}|"
-								   th:value="${user!=null? user.uername:''}"
+								   th:value="${user!=null? user.username:''}"
 								   id="username" name="username" placeholder="请输入您的账号!" required>
 							<!--value注册失败保留预先填入的值-->
 							<!--name和controller中uer对象的属性名相对应，springmvc基于同名原则将参数传递给user.username-->
