--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -21,8 +21,8 @@ body {
 }
 
 header .navbar-brand {
-	background: url('http://static.nowcoder.com/images/res/logo/logo-v3.png') no-repeat;
-	background-size: 147px 42px;
+	background: url('../img/bj.png') no-repeat;
+	background-size: 50px 42px;
 	width: 147px;
 	height: 42px;
 	margin: 5px 15px 5px 0;
@@ -132,6 +132,10 @@ a:hover {
 
 .bg-gray {
 	background: #eff0f2;
+}
+
+.bg-top {
+	background: beige;
 }
 
 .user-header {
