--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="icon" href="https://static.nowcoder.com/images/logo_87_87.png"/>
+	<link rel="icon" th:href="@{/img/note.png}" type="image/x-icon"/>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
 	<link rel="stylesheet" th:href="@{/css/global.css}" /><!--通过thymeleaf模板找到资源-->
-	<title>牛客网-首页</title>
+	<title>学习交流分享-首页</title>
 </head>
 <body>	
 	<div class="nk-container">
@@ -172,7 +172,7 @@
 				<div class="row">
 					<!-- 二维码 -->
 					<div class="col-4 qrcode">
-						<img src="https://uploadfiles.nowcoder.com/app/app_download.png" class="img-thumbnail" style="width:136px;" />
+						<img th:src="@{/img/erweima.jpg}" class="img-thumbnail" style="width:120px;" />
 					</div>
 					<!-- 公司信息 -->
 					<div class="col-8 detail-info">
@@ -207,19 +207,19 @@
 							<div class="col">
 								<ul class="nav btn-group-vertical company-info">
 									<li class="nav-item text-white-50">
-										公司地址：北京市朝阳区大屯路东金泉时代3-2708北京牛客科技有限公司
+										学校地址：福建省福州市闽侯县学园路2号福州大学旗山校区
 									</li>
 									<li class="nav-item text-white-50">
-										联系方式：010-60728802(电话)&nbsp;&nbsp;&nbsp;&nbsp;admin@nowcoder.com
+										联系方式：130xxxx0387(电话)&nbsp;&nbsp;&nbsp;李帅哥
 									</li>
 									<li class="nav-item text-white-50">
-										牛客科技©2018 All rights reserved
+										608宿舍©2021 All rights reserved
 									</li>
-									<li class="nav-item text-white-50">
+<!--									<li class="nav-item text-white-50">
 										京ICP备14055008号-4 &nbsp;&nbsp;&nbsp;&nbsp;
 										<img src="http://static.nowcoder.com/company/images/res/ghs.png" style="width:18px;" />
 										京公网安备 11010502036488号
-									</li>
+									</li>-->
 								</ul>
 							</div>
 						</div>
