--- a/src/main/resources/templates/site/profile.html
+++ b/src/main/resources/templates/site/profile.html
@@ -65,13 +65,14 @@
 				<div class="position-relative">
 					<ul class="nav nav-tabs">
 						<li class="nav-item">
-							<a class="nav-link active" href="profile.html">个人信息</a>
+							<a class="nav-link active" th:href="@{'/user/profile/' + ${user.id}}">个人信息</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="my-post.html">我的帖子</a>
+							<a class="nav-link" th:href="@{'/user/myPosts/' + ${user.id}}" th:text="${loginUser.id!=user.id?'他的帖子':'我的帖子'}">我的帖子</a>
+<!--							th:href="@{|/user/mypost/${user.id}|}"-->
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="my-reply.html">我的回复</a>
+							<a class="nav-link" th:href="@{'/user/myReplies/' + ${user.id}}" th:text="${loginUser.id!=user.id?'他的回复':'我的回复'}">我的回复</a>
 						</li>
 					</ul>
 				</div>
