--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<!--访问该页面时，在此处生成csrf令牌。-->
+<!--	<meta name="_csrf" th:content="${_csrf.token}">-->
+<!--	<meta name="_csrf_header" th:content="${_csrf.headerName}">-->
+
 	<link rel="icon" th:href="@{/img/note.png}" type="image/x-icon"/>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
 	<link rel="stylesheet" th:href="@{/css/global.css}" /><!--通过thymeleaf模板找到资源-->
@@ -69,6 +74,18 @@
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">最热</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">文学</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">法学</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">经济学</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">计算机</a>
 						</li>
 					</ul>
 					<button type="button" class="btn btn-primary btn-sm position-absolute rt-0" data-toggle="modal" data-target="#publishModal" th:if="${loginUser!=null}">我要发布</button><!--登录后显示按钮-->
@@ -167,7 +184,7 @@
 		</div>
 
 		<!-- 尾部 -->
-		<footer class="bg-dark">
+		<footer class="bg-dark" th:fragment="footer">
 			<div class="container">
 				<div class="row">
 					<!-- 二维码 -->
