--- a/src/main/resources/templates/site/discuss-detail.html
+++ b/src/main/resources/templates/site/discuss-detail.html
@@ -69,6 +69,18 @@
 					<span th:utext="${post.title}">备战春招，面试刷题跟他复习，一个月全搞定！</span>
 					<div class="float-right">
 						<input type="hidden" id="postId" th:value="${post.id}">
+
+                        <form>
+                            <select name="subject">
+                                <option value="no" selected="selected">无</option>
+                                <option value="literary">文学</option>
+                                <option value="math">数学</option>
+                                <option value="law">法学</option>
+                                <option value="economics">经济学</option>
+                            </select>
+                            <!--<button>提交</button>-->
+                        </form>
+
 						<button type="button" class="btn btn-danger btn-sm" id="topBtn"
 							th:disabled="${post.type==1}" sec:authorize="hasAnyAuthority('moderator')">置顶</button>
 						<button type="button" class="btn btn-danger btn-sm" id="wonderfulBtn"
