--- a/src/main/resources/templates/site/search.html
+++ b/src/main/resources/templates/site/search.html
@@ -6,7 +6,7 @@
 	<link rel="icon" th:href="@{/img/note.png}" type="image/x-icon"/>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
 	<link rel="stylesheet" th:href="@{/css/global.css}" />
-	<title>牛客网-搜索结果</title>
+	<title>学习交流分享-搜索结果</title>
 </head>
 <body>
 	<div class="nk-container">
