--- a/src/main/resources/templates/site/my-reply.html
+++ b/src/main/resources/templates/site/my-reply.html
@@ -68,17 +68,20 @@
 							<a class="nav-link" th:href="@{'/user/profile/' + ${user.id}}">个人信息</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" th:href="@{'/user/myPosts/' + ${user.id}}" th:text="${loginUser.id!=user.id?'他的帖子':'我的帖子'}">我的帖子</a>
+							<a class="nav-link" th:href="@{'/user/myPosts/' + ${user.id}}" th:text="${loginUser.id!=user.id?'他的笔记':'我的笔记'}">我的笔记</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link active" th:href="@{'/user/myReplies/' + ${user.id}}" th:text="${loginUser.id!=user.id?'他的回复':'我的回复'}">我的回复</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" th:href="@{'/user/myCollect/' + ${user.id}}" th:text="${loginUser.id!=user.id?'他的收藏':'我的收藏'}">我的回复</a>
 						</li>
 					</ul>
 					<a th:href="@{'/user/profile/' + ${user.id}}" class="text-muted position-absolute rt-0">返回个人主页&gt;</a>
 				</div>
 				<!-- 我的回复 -->
 				<div class="mt-4">
-					<h6><b class="square"></b> 回复的帖子(<i th:text="${commentCount}">6</i>)</h6>
+					<h6><b class="square"></b> 回复的笔记(<i th:text="${commentCount}">6</i>)</h6>
 					<ul class="list-unstyled mt-4 pl-3 pr-3">
 						<li class="border-bottom pb-3 mt-4" th:each="map:${comments}">
 							<div class="font-size-16 text-info">
