--- a/src/main/resources/templates/site/profile.html
+++ b/src/main/resources/templates/site/profile.html
@@ -68,11 +68,14 @@
 							<a class="nav-link active" th:href="@{'/user/profile/' + ${user.id}}">个人信息</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" th:href="@{'/user/myPosts/' + ${user.id}}" th:text="${loginUser.id!=user.id?'他的帖子':'我的帖子'}">我的帖子</a>
+							<a class="nav-link" th:href="@{'/user/myPosts/' + ${user.id}}" th:text="${loginUser.id!=user.id?'他的笔记':'我的笔记'}">我的笔记</a>
 <!--							th:href="@{|/user/mypost/${user.id}|}"-->
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" th:href="@{'/user/myReplies/' + ${user.id}}" th:text="${loginUser.id!=user.id?'他的回复':'我的回复'}">我的回复</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" th:href="@{'/user/myCollect/' + ${user.id}}" th:text="${loginUser.id!=user.id?'他的收藏':'我的收藏'}">我的回复</a>
 						</li>
 					</ul>
 				</div>
@@ -81,7 +84,7 @@
 					<img th:src="${user.headerUrl}" class="align-self-start mr-4 rounded-circle" alt="用户头像" style="width:50px;">
 					<div class="media-body">
 						<h5 class="mt-0 text-warning">
-							<span th:utext="${user.username}">nowcoder</span>
+							<span th:utext="${user.username}"></span>
 							<input type="hidden" id="entityId" th:value="${user.id}"><!--下个节点取id-->
 							<button type="button" th:class="|btn ${hasFollowed?'btn-secondary':'btn-info'} btn-sm float-right mr-5 follow-btn|"
                                     th:text="${hasFollowed?'已关注':'关注TA'}" th:if="${loginUser!=null&&loginUser.id!=user.id}">关注TA</button>
